# shellai

./: .gitignore  README.md  README_python.md  ai  demo_shellai.py  pip.conf  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  shellai.py  test_prompts.yaml  test_shellai.py
injected_library/: injector  main.c
src/shellai/: __init__.py  __main__.py  shellai.py  tty.py
src/shellai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/shellai/tty/: __init__.py  base.py  bash.py  bash_frida.js  zsh.py  zsh_frida.js
tests/: test_prompts.yaml  test_shellai.py
